External forms for Request quotes and Get started buttons.

--- a/index.html
+++ b/index.html
@@ -313,17 +313,14 @@
       <div class="row zubuz_screenfix_right align-items-center">
         <div class="col-lg-6">
           <div class="zubuz-hero-content">
-            <h2 class="display-5 fw-bold" Promote group and individual learning culture in your organization</h2>
+            <h2 class="display-5 fw-bold"> Promote group and individual learning culture in your organization</h2>
             <p class="mt-4">Develop employees’ skills and boost business performance through the provision of all-round access to learning resources.</p>
             <div class="zubuz-hero-btn-wrap">
-              <button
+              <a target="_blank" href="https://form.jotform.com/241402514294045"
                       style="background-color: #ABFB4F"
-                      class="btn btn-outline-light rounded-pill px-5 py-4 text-dark"
-                      data-bs-toggle="modal"
-                      data-bs-target="#signupForm"
-              >
+                      class="btn btn-outline-light rounded-pill px-5 py-4 text-dark">
                 <span>Get Started</span>
-              </button>
+              </a>
             </div>
           </div>
         </div>
@@ -821,7 +818,7 @@
                 <li><img src="assets/images/v2/check2.png" alt="">100 GB file storage</li>
               </ul>
             </div>
-            <a class="zubuz-pricing-btn" href="pricing.html">Select the plan</a>
+            <a target="_blank" class="zubuz-pricing-btn" href="https://form.jotform.com/241402273701545">Request Quote</a>
           </div>
         </div>
         <div class="col-xl-3 col-md-6">
@@ -844,7 +841,7 @@
                 <li><img src="assets/images/v2/check2.png" alt="">24/7 Support (Live, Email, Chat)</li>
               </ul>
             </div>
-            <a class="zubuz-pricing-btn active" href="pricing.html">Select the plan</a>
+            <a target="_blank" class="zubuz-pricing-btn active" href="https://form.jotform.com/241402273701545">Request Quote</a>
           </div>
         </div>
         <div class="col-xl-3 col-md-6">
@@ -867,7 +864,7 @@
                 <li><img src="assets/images/v2/check2.png" alt="">24/7 Support (Live, Email, Chat)</li>
               </ul>
             </div>
-            <a class="zubuz-pricing-btn" href="pricing.html">Select the plan</a>
+            <a target="_blank" class="zubuz-pricing-btn" href="https://form.jotform.com/241402273701545">Request Quote</a>
           </div>
         </div>
         <div class="col-xl-3 col-md-6">
@@ -886,7 +883,7 @@
                 <li><img src="assets/images/v2/check2.png" alt="">24/7 Instant support via phone, email and chat</li>
               </ul>
             </div>
-            <a class="zubuz-pricing-btn" href="pricing.html">Contact sales team</a>
+            <a target="_blank" class="zubuz-pricing-btn" href="https://form.jotform.com/241402273701545">Request Quote</a>
           </div>
         </div>
       </div>
@@ -935,14 +932,11 @@
 <!--              <button class="zubuz-default-btn zubuz-subscription-btn two" id="zubuz-subscription-btn" type="submit">-->
 <!--                <span>Request Demo</span>-->
 <!--              </button>-->
-              <button
+              <a target="_blank" href="https://form.jotform.com/241402514294045"
                       style="background-color: #ABFB4F"
-                      class="btn btn-outline-light rounded-pill px-5 py-4 text-dark"
-                      data-bs-toggle="modal"
-                      data-bs-target="#signupForm"
-              >
+                      class="btn btn-outline-light rounded-pill px-5 py-4 text-dark">
                 <span>Request Demo</span>
-              </button>
+              </a>
 <!--              <button style="background-color: #ABFB4F" class="btn rounded-pill px-5 text-dark text-light btn-lg">Request Demo</button>-->
 
           </div>
