External forms for Request quotes and Get started buttons.

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
               <h3>Enhanced learning experience:</h3>
             </div>
             <div class="zubuz-iconbox-data">
-              <p>Site license or per user license, Central LMS supports both. The choice is simply yours to make.</p>
+              <p>Site license or per-user license, Central LMS supports both. The choice is simply yours to make.</p>
             </div>
 <!--            <div class="zubuz-iconbox-thumb">-->
 <!--              <img src="assets/webimageasset/pricing.png" alt="">-->
